C++/include/Swelio.h

// Summary:
//      Get the applet version number for card in the reader with specified number
// Description:
//      Get the version number of eid card applet using the zero-based reader index. 
//      The first reader has number 0, second - 1, etc...
//      You can read the information only from one selected reader at once.
// Arguments:
//      readerNumber - The reader index, starting from 0
// Return Value:
//      The card applet version number
int WINAPI GetCardVersion(int readerNumber);
// Summary:
//    Established communication between the card and the reader
// Description:
//   The ActivateCard function establishes a connection between the calling application and a smart card contained 
//   by a specific reader. If no card exists in the specified reader, an error is returned.
// Arguments:
//	 readerNumber - The zero-based index of the card reader
// Return Value:
//   Returns TRUE if the card is activated, otherwise returns FALSE
BOOL WINAPI ActivateCardEx(int readerNumber);
// Summary:
//     Terminates a connection between a smart card and a reader
// Description:
//     The DeactivateCard function terminates a connection previously opened between the calling application and a smart card in the target reader.
// Arguments:
//	 readerNumber - The zero-based index of the card reader
void WINAPI DeactivateCardEx(int readerNumber);
// Summary:
//     Checks the connection between a smart card and a reader
// Description:
//     This function checks the connection between the calling application and a smart card in the target reader.
// Arguments:
//	 readerNumber - The zero-based index of the card reader
BOOL WINAPI IsCardActivatedEx(int readerNumber);
// Summary:
//     Checks if the card is still inserted in the card reader
// Description:
//     This function checks if the card is still present in the card reader
// Arguments:
//	 readerNumber - The zero-based index of the card reader
BOOL WINAPI IsCardStillInsertedEx(int readerNumber);
// Summary:
//     Performs Base64 encoding of the photo
// Description:
//     Use this function for Base64 encoding of the photo
// Arguments:
//     photo - The pointer to EidPicture structure
//     buffer - The Base64 encoded photo buffer
//     bufferSize - The size of the buffer
// Return value:
//     Returns the size of the buffer needed to hold the encoded photo
int  WINAPI EncodePhoto(PeidPicture photo, BYTE* buffer, int bufferSize);
// Summary:
//     Loads photo from a file
// Description:
//     Loads raw picture data from a file
// Arguments:
//     photo - The pointer to EidPicture structure
//     fileName - Destination file name
void WINAPI LoadPhotoW(PeidPicture photo, LPWSTR fileName);
// Summary:
//     Read Authentication Certificate to memory
// Description:
//     Read Authentication Certificate from the card to EidCertificate structure
// Arguments:
//     cerificate - The pointer to EidCertificate structure
// Return value:
//      TRUE when certificate is successfully received from the card;
//      otherwise returns FALSE
BOOL WINAPI ReadAuthenticationCertificate(PEidCertificate certificate);
// Summary:
//     Read Non Repudiation Certificate to memory
// Description:
//     Read Non Repudiation Certificate to EidCertificate structure
// Arguments:
//     cerificate - The pointer to EidCertificate structure
// Return value:
//      TRUE when certificate is successfully received from the card;
//      otherwise returns FALSE
BOOL WINAPI ReadNonRepudiationCertificate(PEidCertificate certificate);
// Summary:
//     Read Ca Certificate to memory
// Description:
//     Read Ca Certificate to EidCertificate structure
// Arguments:
//     cerificate - The pointer to EidCertificate structure
// Return value:
//      TRUE when certificate is successfully received from the card;
//      otherwise returns FALSE
BOOL WINAPI ReadCaCertificate(PEidCertificate certificate);
// Summary:
//     Read Root Ca Certificate to memory
// Description:
//     Read Root Ca Certificate to EidCertificate structure
// Arguments:
//     cerificate - The pointer to EidCertificate structure
// Return value:
//      TRUE when certificate is successfully received from the card;
//      otherwise returns FALSE
BOOL WINAPI ReadRootCaCertificate(PEidCertificate certificate);
// Summary:
//     Read Rrn Certificate to memory
// Description:
//     Read Rrn Certificate to EidCertificate structure
// Arguments:
//     cerificate - The pointer to EidCertificate structure
// Return value:
//      TRUE when certificate is successfully received from the card;
//      otherwise returns FALSE
BOOL WINAPI ReadRrnCertificate(PEidCertificate certificate);
// Summary:
//     Performs Base64 encoding of the certificate
// Arguments:
//     certificate - The certificate data
//     buffer - The Base64 encoded certificate buffer
//     bufferSize - The size of the buffer
// Return value:
//     Returns the size of the buffer needed to hold the encoded certificate
int  WINAPI EncodeCertificate(PEidCertificate certificate, BYTE* buffer, int bufferSize);
// Summary:
//     Displays the dialog window with certificate information
// Description:
//     Use this function to show the certificate for the user
// Arguments:
//   certificate - The certificate data
void WINAPI DisplayCertificate(PEidCertificate certificate);
#define LoadPhoto LoadPhotoW
#define LoadPhoto LoadPhotoA