C++/include/FileOperations.h

//   Summary
//   Creates UNICODE file
//   Parameters
//   fileName :  The name of the file 
void WINAPI CreateUnicodeFileW(LPCWSTR fileName);
//   Summary
//   Deletes file to WIndows Recycle Bin
//   Description
//   Use this function to delete the file to Windows Recycle Bin
//   Parameters
//   fileName :  The name of the file
//   silent :    Do not display a progress dialog box            
void WINAPI DeleteToRecycleBinW(LPWSTR fileName, BOOL silent);
 //  Summary
 //  Retrieves the size of a specified file.
 //  Description
 //  This function determines the size of the file specified by the name of the file
 //  Parameters
 //  fileName :  The name of the file
 //  Return Value
 //  The size of the file in bytes.                             
DWORD WINAPI FileGetSizeW(LPCWSTR fileName);
 //  Summary
 //  Tests whether a specified file exists.
 //  Description
 //  Use this function to check if the file with provided name
 //  exists.
 //  Return Value
 //  FileExists returns TRUE if the file specified by FileName
 //  exists. If the file does not exist, FileExists returns FALSE. 
BOOL WINAPI FileExistsW(LPWSTR fileName);
 //  Summary
 //  Checks the file extension
 //  Description
 //  This function checks if the file has a given extension
 //  Parameters
 //  fileName :  The name of the file
 //  ext :       The file name extension
 //  Return Value
 //  Returns true if the file has a specified extension, otherwise
 //  returns false.                                                
BOOL WINAPI FileExtensionIsW(LPCWSTR fileName, LPCWSTR ext);
 //  Summary
 //  Checks if the file is an image file
 //  Parameters
 //  fileName :  The name of the file
 //  Return Value
 //  Returns TRUE if the file is an image file, otherwise returns
 //  FALSE.                                                       
BOOL WINAPI FileIsImageW(LPCWSTR fileName);
 //  Summary
 //  Deletes a file from disk.
 //  Description
 //  DeleteFile deletes the file named by fileName from the disk.
 //  Parameters
 //  fileName :  The name of the file                             
void WINAPI FileDeleteW(LPWSTR fileName);
 //  Summary
 //  This function sets the file attributes to normal.
 //  Description
 //  This function removed additional file attributes, like
 //  system, read-only and hidden.
 //  Parameters
 //  fileName :  The name of the file                       
void WINAPI ClearFileAttributesW(LPWSTR fileName);
 //  Summary
 //  The CopyFile function copies an existing file to a new file.
 //  Description
 //  This function makes a copy of the file with the new name or
 //  path.
 //  Parameters
 //  oldName :  The name of the source file
 //  newName :  The name of the destination file
 //  Return Value
 //  The result of the function is TRUE when the file is
 //  successfully copied to the new location, otherwise the result
 //  is FALSE.                                                     
BOOL WINAPI FileCopyW(LPWSTR oldName, LPWSTR newName);
 //  Summary
 //  Determines whether a specified directory exists.
 //  Description
 //  Call DirectoryExists to determine whether the directory
 //  specified by the Directory parameter exists. If the directory
 //  exists, the function returns True. If the directory does not
 //  exist, the function returns False.
 //  If a full path name is entered, DirectoryExists searches for
 //  the directory along the designated path. Otherwise, the
 //  Directory parameter is interpreted as a relative path name
 //  from the current directory.
 //  Parameters
 //  fileName :  The name of the directory
 //  Return Value
 //  Returns TRUE if the directory exists, otherwise returns FALSE 
BOOL WINAPI DirectoryExistsW(LPWSTR fileName);
 //  Summary
 //  Checks if the file is a Windows executable
 //  Parameters
 //  fileName :  The name of the file
 //  Return Value
 //  Returns TRUE if the file is a Windows executable, otherwise
 //  returns FALSE.                                              
BOOL WINAPI FileIsExeW(LPWSTR fileName);
 //  Summary
 //  Checks if the file is a Windows icon (.ico) file
 //  Parameters
 //  fileName :  The name of the file
 //  Return Value
 //  Returns TRUE if the file is a Windows icon (.ico) file,
 //  otherwise returns FALSE.                                
BOOL WINAPI FileIsIconW(LPWSTR fileName);
 //  Summary
 //  Checks to see if the file specified by file name is a Microsoft Windows 
 //  shortcut (.Lnk) file (and is neither a file nor a folder). 
 //  Description
 //  This function is used to check if the file with provided file name is a Windows shortcut
 //  or not
 //  Parameters
 //  fileName : The name of the file to check
 //  Return value
 //  Returns TRUE if the file is a Microsoft Windows shortcut,
 //  otherwise returns FALSE
BOOL WINAPI FileIsLink(LPCWSTR fileName);
#define CreateUnicodeFile		CreateUnicodeFileW
#define DeleteToRecycleBin		DeleteToRecycleBinW
#define FileGetSize				FileGetSizeW
#define FileExists				FileExistsW
#define FileExtensionIs			FileExtensionIsW
#define FileIsImage				FileIsImageW
#define FileDelete				FileDeleteW
#define ClearFileAttributes		ClearFileAttributesW
#define FileCopy				FileCopyW
#define DirectoryExists			DirectoryExistsW
#define FileIsExe				FileIsExeW
#define FileIsIcon				FileIsIconW
#define CreateUnicodeFile		CreateUnicodeFileA
#define DeleteToRecycleBin		DeleteToRecycleBinA
#define FileGetSize				FileGetSizeA
#define FileExists				FileExistsA
#define FileExtensionIs			FileExtensionIsA
#define FileIsImage				FileIsImageA
#define FileDelete				FileDeleteA
#define ClearFileAttributes		ClearFileAttributesA
#define FileCopy				FileCopyA
#define DirectoryExists			DirectoryExistsA
#define FileIsExe				FileIsExeA
#define FileIsIcon				FileIsIconA