C++/include/SystemInfo.h

//Returns the IP address
void WINAPI CurrentIPAddressW(LPWSTR address, UINT len);
//Returns TRUE if Windows Recyce Bin is empty
BOOL WINAPI RecycleBinEmpty();
#define CurrentIPAddress CurrentIPAddressW
#define CurrentIPAddress CurrentIPAddressA