Swelio.Engine/Swelio.Engine/NativeMethods.cs

//===============================================================================
// Copyright (c) Serhiy Perevoznyk.  All rights reserved.
// THIS CODE AND INFORMATION IS PROVIDED "AS IS" WITHOUT WARRANTY
// OF ANY KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING BUT NOT
// LIMITED TO THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
// FITNESS FOR A PARTICULAR PURPOSE.
//===============================================================================

using System;
using System.Runtime.InteropServices;
using System.Text;

namespace Swelio.Engine
{

    [UnmanagedFunctionPointer(CallingConvention.Winapi, CharSet = CharSet.Unicode)]
    public delegate void ReaderCallbackDelegate(ref int readerNumber, ref int eventCode, IntPtr userContext);

    [UnmanagedFunctionPointer(CallingConvention.Winapi, CharSet = CharSet.Auto)]
    internal delegate IntPtr WndProcDelegate(IntPtr hWnd, int msg, IntPtr wParam, IntPtr lParam);

    internal static class NativeMethods
    {
#if WIN64
        public const string DLL_FILE_NAME = "Swelio64.dll";
#else
        public const string DLL_FILE_NAME = "Swelio32.dll";
#endif

        [DllImport("gdi32.dll", CharSet = CharSet.Auto, CallingConvention = CallingConvention.StdCall, SetLastError = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool DeleteObject(IntPtr hObject);

        [DllImport("shlwapi.dll", CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool PathUnExpandEnvStrings([MarshalAs(UnmanagedType.LPWStr)] string pszPath, [Out] StringBuilder pszBuf, int cchBuf);



        [DllImport(DLL_FILE_NAME, EntryPoint = "GetCardVersion", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern int GetCardVersion(int readerNumber);

        [DllImport(DLL_FILE_NAME, EntryPoint = "IsCardActivatedEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsCardActivatedEx(int readerNumber);

        [DllImport(DLL_FILE_NAME, EntryPoint = "IsCardStillInsertedEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsCardStillInsertedEx(int readerNumber);

        [DllImport(DLL_FILE_NAME, EntryPoint = "FileIsLink", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool FileIsLink([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "RecycleBinEmpty", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool RecycleBinEmpty();

        [DllImport(DLL_FILE_NAME, EntryPoint = "ActivateCardEx", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool ActivateCardEx(int readerNumber);

        [DllImport(DLL_FILE_NAME, EntryPoint = "CardDecryptFileW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool CardDecryptFile([MarshalAs(UnmanagedType.LPWStr)] string Source, [MarshalAs(UnmanagedType.LPWStr)] string Destination);

        [DllImport(DLL_FILE_NAME, EntryPoint = "CardEncryptFileW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool CardEncryptFile([MarshalAs(UnmanagedType.LPWStr)] string Source, [MarshalAs(UnmanagedType.LPWStr)] string Destination);

        [DllImport(DLL_FILE_NAME, EntryPoint = "CheckMD5", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool CheckMD5(byte[] source, int sourceSize, byte[] buffer, int bufferSize);

        [DllImport(DLL_FILE_NAME, EntryPoint = "CheckSHA1", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool CheckSHA1(byte[] source, int sourceSize, byte[] buffer, int bufferSize);

        [DllImport(DLL_FILE_NAME, EntryPoint = "ClearFileAttributesW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void ClearFileAttributes([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "ClearUnusedMemory", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void ClearUnusedMemory();

        [DllImport(DLL_FILE_NAME, EntryPoint = "CreateUnicodeFileW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void CreateUnicodeFile([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "CurrentIPAddressW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void CurrentIPAddress(StringBuilder Address, uint Len);

        [DllImport(DLL_FILE_NAME, EntryPoint = "DeactivateCardEx", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void DeactivateCardEx(int readerNumber);

        [DllImport(DLL_FILE_NAME, EntryPoint = "DecryptFileAESW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool DecryptFileAES([MarshalAs(UnmanagedType.LPWStr)] string Source, [MarshalAs(UnmanagedType.LPWStr)] string Destination, [MarshalAs(UnmanagedType.LPWStr)] string Password);

        [DllImport(DLL_FILE_NAME, EntryPoint = "DeleteToRecycleBinW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void DeleteToRecycleBin([MarshalAs(UnmanagedType.LPWStr)] string fileName, [MarshalAs(UnmanagedType.Bool)] bool Silent);

        [DllImport(DLL_FILE_NAME, EntryPoint = "DirectoryExistsW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool DirectoryExists([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "DisplayCertificate", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void DisplayCertificate([In, Out] EIDCertificate Certificate);

        [DllImport(DLL_FILE_NAME, EntryPoint = "ReadAuthenticationCertificate", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool ReadAuthenticationCertificate([In, Out] EIDCertificate Certificate);

        [DllImport(DLL_FILE_NAME, EntryPoint = "ReadNonRepudiationCertificate", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool ReadNonRepudiationCertificate([In, Out] EIDCertificate Certificate);

        [DllImport(DLL_FILE_NAME, EntryPoint = "ReadCaCertificate", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool ReadCaCertificate([In, Out] EIDCertificate Certificate);

        [DllImport(DLL_FILE_NAME, EntryPoint = "ReadRootCaCertificate", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool ReadRootCaCertificate([In, Out] EIDCertificate Certificate);

        [DllImport(DLL_FILE_NAME, EntryPoint = "ReadRrnCertificate", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool ReadRrnCertificate([In, Out] EIDCertificate Certificate);

        [DllImport(DLL_FILE_NAME, EntryPoint = "EmptyRecycleBin", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void EmptyRecycleBin();

        [DllImport(DLL_FILE_NAME, EntryPoint = "EncodeCertificate", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern int EncodeCertificate([In, Out] EIDCertificate Certificate, byte[] buffer, int bufferSize);

        [DllImport(DLL_FILE_NAME, EntryPoint = "EncodePhoto", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern int EncodePhoto([In, Out] EIDPicture Photo, byte[] buffer, int bufferSize);

        [DllImport(DLL_FILE_NAME, EntryPoint = "LoadPhotoW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void LoadPhoto([In, Out] EIDPicture Photo, [MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "EncryptFileAESW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool EncryptFileAES([MarshalAs(UnmanagedType.LPWStr)] string Source, [MarshalAs(UnmanagedType.LPWStr)] string Destination, [MarshalAs(UnmanagedType.LPWStr)] string Password);

        [DllImport(DLL_FILE_NAME, EntryPoint = "FileCopyW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool FileCopy([MarshalAs(UnmanagedType.LPWStr)] string OldName, [MarshalAs(UnmanagedType.LPWStr)] string NewName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "FileDeleteW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void FileDelete([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "FileExistsW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool FileExists([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "FileExtensionIsW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool FileExtensionIs([MarshalAs(UnmanagedType.LPWStr)] string fileName, [MarshalAs(UnmanagedType.LPWStr)] string Ext);

        [DllImport(DLL_FILE_NAME, EntryPoint = "FileGetSizeW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern int FileGetSize([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "FileIsExeW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool FileIsExe([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "FileIsIconW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool FileIsIcon([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "FileIsImageW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool FileIsImage([MarshalAs(UnmanagedType.LPWStr)] string fileName);
